--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,10 @@
    --blue-color:#2196F3;
    --white-color:#FFFFFF;
    --grey-color:#757575;
+   --footer-hero-color:#2F303A;
+   --second-backgraund-color:#F5F4FA;
+
+:    
 }
 
 body {
@@ -22,6 +26,8 @@ body {
    font-weight: 700;
    font-size: 26px;
    line-height:1.19;
+   color:var(--blue-color)
+
    }
 .list{
    list-style: none;
@@ -71,7 +77,7 @@ body {
    text-transform: uppercase;
 }
 .hero {
-   background-color: #2F303A;
+   background-color:var(--footer-hero-color);
 }
 .details .title{
    color: var(--main-text-color);
@@ -113,16 +119,62 @@ body {
    clip-path: inset(50%);
    margin: -1px;
  }
+ .button-portfolio{
+   font-family: inherit;
+   font-weight: 500;
+   font-size: 16px;
+   line-height: 1.62;
+   text-align: center;
+ }
+
+
  .button-portfolio:hover,
  .button-portfolio:focus
   {
    color:var(--white-color) ;
    background-color:var(--blue-color);
-   }
+      }
    .portf-nav .link
  {
    color:var(--main-text-color)}
 
    .adress-link {
-text-decoration: none;
+    text-decoration: none;
+    color:var(--white-color);
+    font-style: normal;
+
    }
+   .link{
+      text-decoration: none;
+      color:currentColor;
+       }
+   .li{
+      text-align: center;
+   }
+   .footer {
+      background-color:var(--footer-hero-color);}
+
+   .portfolio-name {
+      font-weight: 700;
+      font-size: 18px;
+      line-height: 2;
+      letter-spacing: 0.06em;
+   }
+   .portfolio-list {
+     font-size: 16px;
+     line-height: 1.88;
+     color:var(--grey-color);
+   }
+
+.team-name {
+   font-weight: 500;
+   font-size: 16px;
+   line-height: 1.19;
+   text-align: center;
+}
+.team-title {
+   font-size: 16px;
+   line-height: 19px;
+   text-align: center;
+   color:var(--grey-color);
+}
