--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,7 @@ body {
    color:var(--white-color);
    font-weight: 900;
    font-size: 44px;
-   line-height:1.36;
+   line-height:1.4;
    text-align: center;
    letter-spacing: 0.06em;
    text-transform: uppercase;
@@ -108,7 +108,14 @@ body {
    align-items: center;
    text-align: center;
    letter-spacing: 0.06em;
+   border: none;
+   border-radius: 4px ; 
 }
+.button:hover,
+.button:focus{
+   background:#188CE8;
+}
+
 .visually-hidden {
    position: absolute;
    white-space: nowrap;
@@ -127,6 +134,8 @@ body {
    font-size: 16px;
    line-height: 1.62;
    text-align: center;
+   border-radius: 4px ; 
+   border:none;
  }
 .button-portfolio:hover,
 .button-portfolio:focus
@@ -142,9 +151,24 @@ body {
    font-size: 14px;
    line-height: 1.71;
 }
-.color {
+.adress-link-color {
+      text-decoration: none;
+      font-style: normal;
+      letter-spacing: 0.03em;
+      font-size: 14px;
+      line-height: 1.71;
       color:var(--wtile-second-color);
    }
+
+.adress-link:hover,
+.adress-link:focus,
+.adress-link-color:hover,
+.adress-link-color:focus
+   {
+      color:var(--blue-color) ;
+   }
+
+
 .link{
    text-decoration: none;
    color:currentColor;
@@ -183,4 +207,6 @@ body {
 .team{
    background-color: var(--white-color)
 }
-
+.ourteam{
+   background-color: var(--second-backgraund-color)
+}
